compiler/actonc/test/syntaxerrors/err11.act
# Unclosed string literal
def greet(name):
    msg = "Hello, 
    return msg